@@ -107,6 +107,8 @@ class RQuery
             $this->contextObject = new DHCPRQueryContext($this);
         elseif( $this->objectType == 'certificate' )
             $this->contextObject = new CertificateRQueryContext($this);
+        elseif( $this->objectType == 'static-route' )
+            $this->contextObject = new StaticRouteRQueryContext($this);
         else
             derr("unsupported object type '$objectType'");
     }
@@ -693,5 +695,6 @@ require_once 'filters/filters-Schedule.php';
 require_once 'filters/filters-Device.php';
 require_once 'filters/filters-DHCP.php';
 require_once 'filters/filters-Certificate.php';
+require_once 'filters/filters-Static-Route.php';
 
 
