@@ -1,0 +1,11 @@
+<?php
+
+/**
+ * Class StaticRouteRQueryContext
+ * @property StaticRoute $object
+ * @ignore
+ */
+class StaticRouteRQueryContext extends RQueryContext
+{
+
+}
