@@ -428,6 +428,8 @@ class UTIL
             $tmp_array = &DHCPCallContext::$supportedActions;
         elseif( $this->utilType == 'certificate' )
             $tmp_array = &CertificateCallContext::$supportedActions;
+        elseif( $this->utilType == 'static-route' )
+            $tmp_array = &StaticRouteCallContext::$supportedActions;
 
         return $tmp_array;
     }
@@ -1203,6 +1205,8 @@ class UTIL
                 $context = new DHCPCallContext($tmp_array[$actionName], $explodedAction[1], $this->nestedQueries, $this);
             elseif( $this->utilType == 'certificate' )
                 $context = new CertificateCallContext($tmp_array[$actionName], $explodedAction[1], $this->nestedQueries, $this);
+            elseif( $this->utilType == 'static-route' )
+                $context = new StaticRouteCallContext($tmp_array[$actionName], $explodedAction[1], $this->nestedQueries, $this);
 
             $context->baseObject = $this->pan;
             if( isset($this->configInput['type'])  )
