@@ -41,6 +41,22 @@
                     }
                 }
             },
+            "combine-addressgroups": {
+                "name": "combine-addressgroups",
+                "GlobalInitFunction": {},
+                "MainFunction": {},
+                "GlobalFinishFunction": {},
+                "args": {
+                    "new_addressgroup_name": {
+                        "type": "string",
+                        "default": "*nodefault*"
+                    },
+                    "replace_groups": {
+                        "type": "bool",
+                        "default": false
+                    }
+                }
+            },
             "create-address": {
                 "name": "create-address",
                 "MainFunction": {},
@@ -571,6 +587,14 @@
                     "is.in.file": {
                         "Function": {},
                         "arg": true
+                    },
+                    "same.as.region.predefined": {
+                        "Function": {},
+                        "arg": false,
+                        "ci": {
+                            "fString": "(%PROP% new test 1)",
+                            "input": "input\/panorama-8.0.xml"
+                        }
                     }
                 }
             },
@@ -875,6 +899,15 @@
                         "arg": true,
                         "ci": {
                             "fString": "(%PROP% \/grp\/)",
+                            "input": "input\/panorama-8.0.xml"
+                        }
+                    },
+                    "is.set": {
+                        "Function": {},
+                        "arg": false,
+                        "argObjectFinder": "$objectFind=null;\n$objectFind=$object->tags->parentCentralStore->find('!value!');",
+                        "ci": {
+                            "fString": "(%PROP% grp.shared-group1)",
                             "input": "input\/panorama-8.0.xml"
                         }
                     }
@@ -1330,6 +1363,34 @@
             }
         },
         "filter": {
+            "name": {
+                "operators": {
+                    "eq": {
+                        "Function": {},
+                        "arg": true,
+                        "ci": {
+                            "fString": "(%PROP% new test 1)",
+                            "input": "input\/panorama-8.0.xml"
+                        }
+                    },
+                    "eq.nocase": {
+                        "Function": {},
+                        "arg": true,
+                        "ci": {
+                            "fString": "(%PROP% new test 2)",
+                            "input": "input\/panorama-8.0.xml"
+                        }
+                    },
+                    "contains": {
+                        "Function": {},
+                        "arg": true,
+                        "ci": {
+                            "fString": "(%PROP% -)",
+                            "input": "input\/panorama-8.0.xml"
+                        }
+                    }
+                }
+            },
             "publickey-algorithm": {
                 "operators": {
                     "is.rsa": {
@@ -1738,6 +1799,20 @@
                     }
                 }
             },
+            "sharedgateway-delete": {
+                "name": "sharedgateway-delete",
+                "MainFunction": {}
+            },
+            "sharedgateway-migrate-to-vsys": {
+                "name": "sharedgateway-migrate-to-vsys",
+                "MainFunction": {},
+                "args": {
+                    "name": {
+                        "type": "string",
+                        "default": "false"
+                    }
+                }
+            },
             "sp_spg-create-alert-only-bp": {
                 "name": "sp_spg-create-alert-only-bp",
                 "GlobalInitFunction": {},
@@ -1832,6 +1907,10 @@
             },
             "template-delete": {
                 "name": "template-delete",
+                "MainFunction": {}
+            },
+            "virtualsystem-delete": {
+                "name": "virtualsystem-delete",
                 "MainFunction": {}
             },
             "xml-extract": {
@@ -7006,6 +7085,16 @@
     "ssh-connector": {
         "name": "ssh-connector",
         "action": [],
+        "filter": []
+    },
+    "static-route": {
+        "name": "static-route",
+        "action": {
+            "display": {
+                "name": "display",
+                "MainFunction": {}
+            }
+        },
         "filter": []
     },
     "stats": {
